[gd_scene load_steps=4 format=3 uid="uid://cm6tcg1ny1ofs"]

[ext_resource type="Script" uid="uid://hrfuddyr24kj" path="res://hud.gd" id="1_37p78"]

[sub_resource type="SystemFont" id="SystemFont_37p78"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_64ctp"]
font = SubResource("SystemFont_37p78")
font_size = 64

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="GameOverMessage" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -232.0
offset_top = -369.0
offset_right = 248.0
offset_bottom = -281.0
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_64ctp")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Lives" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -569.0
offset_top = -645.0
offset_right = -89.0
offset_bottom = -557.0
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_64ctp")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
